[package]
name = "aspen-ci-core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Core CI pipeline types and pure functions for Aspen distributed systems"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Schema generation
schemars = { workspace = true }

# Error handling
snafu = "0.8.9"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { workspace = true }

[dev-dependencies]
proptest = "1.0"
