[package]
name = "aspen-ci-executor-nix"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Nix build executor for Aspen CI jobs"
authors = ["Aspen Contributors"]

[dependencies]
# Core Aspen dependencies
aspen-core = { workspace = true }
aspen-ci-core = { path = "../aspen-ci-core" }
aspen-ci-executor-shell = { path = "../aspen-ci-executor-shell", features = ["nix-cache-proxy"] }
aspen-blob = { workspace = true }
aspen-cache = { path = "../aspen-cache" }
aspen-jobs = { workspace = true }

# Iroh for P2P networking
iroh = { version = "0.95.1", features = ["discovery-local-network", "discovery-pkarr-dht"] }

# SNIX dependencies for direct NAR ingestion
snix-castore = { workspace = true }
snix-store = { workspace = true }
nix-compat = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Logging and tracing
tracing = { workspace = true }

# Utilities
sha2 = { workspace = true }
hex = "0.4"
glob = "0.3"

[dev-dependencies]
tempfile = "3.4.0"
tokio-test = "0.4"
proptest = "1.0"
