[package]
name = "aspen-ci-executor-nix"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Nix build executor for Aspen CI jobs"
authors = ["Aspen Contributors"]

[dependencies]
# Core Aspen dependencies
aspen-core = { workspace = true }
aspen-ci-core = { path = "../aspen-ci-core" }
aspen-ci-executor-shell = { path = "../aspen-ci-executor-shell" }
aspen-blob = { workspace = true }
aspen-cache = { workspace = true }
aspen-jobs = { workspace = true }

# Iroh for P2P networking
iroh = { version = "0.97.0", features = ["address-lookup-mdns", "address-lookup-pkarr-dht"] }

# SNIX dependencies
snix-castore = { workspace = true, optional = true }
snix-store = { workspace = true, optional = true }
# nix-compat: always needed for FlakeRef parsing; also used for NAR ingestion with snix feature
nix-compat = { workspace = true }
# snix-eval: in-process Nix evaluation (Tier 3)
snix-eval = { workspace = true, optional = true }
snix-glue = { workspace = true, optional = true }
snix-build = { workspace = true, optional = true }

# Build service utilities
uuid = { version = "1", features = ["v4"], optional = true }
futures = { version = "0.3", optional = true }
tonic = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Logging and tracing
tracing = { workspace = true }

# Utilities
blake3 = { workspace = true }
bstr = { version = "1.0", optional = true }
bytes = { version = "1.0", optional = true }
hex = "0.4"
glob = "0.3"


# Fetching: tarball download + unpack for flake inputs
flate2 = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[features]
default = []
# SNIX integration for decomposed content-addressed cache uploads
snix = ["dep:snix-castore", "dep:snix-store"]
# In-process Nix evaluation via snix-eval + snix-glue
snix-eval = ["snix", "dep:snix-eval", "dep:snix-glue", "dep:snix-build"]
# Native build execution via snix-build BuildService (bubblewrap/OCI sandbox)
snix-build = ["snix-eval", "dep:bstr", "dep:bytes", "dep:uuid", "dep:futures", "dep:tonic", "dep:flate2", "dep:tar", "dep:sha2", "dep:base64"]
# Retain nix CLI subprocess as fallback when snix-build is unavailable
nix-cli-fallback = []
nix-cache-proxy = ["aspen-ci-executor-shell/nix-cache-proxy"]

[dev-dependencies]
tempfile = "3.4.0"
tokio-test = "0.4"
proptest = "1.0"
rnix = "0.11.0"
