[package]
name = "aspen-ci-executor-shell"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Shell/local executor for Aspen CI jobs"
authors = ["Aspen Contributors"]

[dependencies]
# Core Aspen dependencies
aspen-core = { workspace = true }
aspen-ci-core = { path = "../aspen-ci-core" }
aspen-blob = { workspace = true }
aspen-cache = { path = "../aspen-cache" }
aspen-jobs = { workspace = true }

# Iroh for P2P networking
iroh = { version = "0.95.1", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-blobs = "0.97"

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Error handling
snafu = "0.8.9"

# Logging and tracing
tracing = { workspace = true }

# Utilities
hex = "0.4"
glob = "0.3"

# Archive extraction for workspace seeding
flate2 = "1.0"
tar = "0.4"

# Process execution
command-group = { version = "5.0", features = ["with-tokio"] }

# SNIX dependencies for direct NAR ingestion (optional)
snix-castore = { workspace = true, optional = true }
snix-store = { workspace = true, optional = true }
nix-compat = { workspace = true, optional = true }

# HTTP/3 cache proxy for Nix binary cache substitution (optional)
h3 = { workspace = true, optional = true }
h3-iroh = { workspace = true, optional = true }
hyper = { version = "1.0", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"], optional = true }
http-body-util = { version = "0.1", optional = true }
http = { version = "1.0", optional = true }
bytes = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[features]
default = []
snix = ["dep:snix-castore", "dep:snix-store", "dep:nix-compat"]
nix-cache-proxy = [
    "dep:h3",
    "dep:h3-iroh",
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:http",
    "dep:bytes",
    "dep:tokio-stream",
]

[dev-dependencies]
tempfile = "3.4.0"
tokio-test = "0.4"
proptest = "1.0"
