[package]
name = "aspen-ci-executor-vm"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Cloud Hypervisor VM executor for Aspen CI jobs"
authors = ["Aspen Contributors"]

[dependencies]
# Core Aspen dependencies
aspen-core = { workspace = true }
aspen-ci-core = { path = "../aspen-ci-core" }
aspen-ci-executor-shell = { path = "../aspen-ci-executor-shell" }
aspen-blob = { workspace = true }
aspen-cache = { path = "../aspen-cache" }
aspen-fuse = { workspace = true, features = ["virtiofs"] }
aspen-jobs = { workspace = true }
aspen-ticket = { path = "../aspen-ticket" }

# Iroh for blob hashes
iroh-blobs = "0.97"

# HTTP dependencies for Cloud Hypervisor REST API (Unix socket)
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = { version = "0.1" }
http = { version = "1.0" }
bytes = { workspace = true }

# Process execution and vsock
tokio-vsock = "0.7"
command-group = { version = "5.0", features = ["with-tokio"] }

# Serialization
serde = { workspace = true }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Error handling
snafu = "0.8.9"

# Logging and tracing
tracing = { workspace = true }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { workspace = true }
glob = "0.3"
hex = "0.4"

# Archive handling for workspace seeding
flate2 = "1.0"
tar = "0.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[features]
default = []

[dev-dependencies]
tempfile = "3.4.0"
tokio-test = "0.4"
proptest = "1.0"
