[package]
name = "aspen-ci-handler"
version = "0.1.0"
edition = "2024"
description = "CI/CD pipeline RPC handler for Aspen distributed cluster"
license = "AGPL-3.0-or-later"

[dependencies]
# RPC core abstractions (RequestHandler trait, ClientProtocolContext)
aspen-rpc-core = { path = "../aspen-rpc-core", features = ["ci", "forge", "blob", "nickel"] }

# Local crates
aspen-client-api = { workspace = true, features = ["ci"] }
aspen-core = { path = "../aspen-core" }
aspen-ci = { path = "../../../aspen-ci/crates/aspen-ci", features = ["nickel"] }
aspen-cache = { path = "../../../aspen-nix/crates/aspen-cache" }
aspen-forge = { path = "../../../aspen-forge/crates/aspen-forge", optional = true }
aspen-blob = { path = "../aspen-blob", optional = true }
aspen-jobs = { path = "../aspen-jobs" }
aspen-jobs-worker-shell = { path = "../aspen-jobs-worker-shell" }

# Core dependencies
tokio = { version = "1.0", features = ["sync"] }
tracing = "0.1"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Hash and encoding dependencies
blake3 = { workspace = true }
hex = "0.4"
iroh-blobs = "0.97"

[features]
default = []
forge = ["dep:aspen-forge"]
blob = ["dep:aspen-blob"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
