[package]
name = "aspen-ci"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "CI/CD pipeline system for Aspen with Nickel configuration"
authors = ["Aspen Contributors"]

[[bin]]
name = "aspen-ci-agent"
path = "src/bin/aspen-ci-agent.rs"

[dependencies]
# Core Aspen dependencies
aspen-core = { workspace = true }
aspen-forge = { workspace = true }
aspen-jobs = { workspace = true }
aspen-blob = { workspace = true }
aspen-cache = { path = "../aspen-cache" }
aspen-auth = { workspace = true }
aspen-ticket = { path = "../aspen-ticket" }

# CI executor crates
aspen-ci-core = { path = "../aspen-ci-core" }
aspen-ci-executor-shell = { path = "../aspen-ci-executor-shell", optional = true }
aspen-ci-executor-vm = { path = "../aspen-ci-executor-vm", optional = true }
aspen-ci-executor-nix = { path = "../aspen-ci-executor-nix", optional = true }

# Optional Nickel configuration support
aspen-nickel = { path = "../aspen-nickel", optional = true }

# SNIX dependencies for direct NAR ingestion (optional, forwarded to executor crates)
snix-castore = { workspace = true, optional = true }
snix-store = { workspace = true, optional = true }
nix-compat = { workspace = true, optional = true }

# Nickel language for config parsing (optional)
nickel-lang = { workspace = true, optional = true }

# Serialization
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"
futures = { workspace = true }

# Error handling
snafu = "0.8.9"
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Utilities
blake3 = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { workspace = true }
hex = "0.4"
iroh = { version = "0.95.1", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-blobs = "0.97"
tokio-util = { version = "0.7", features = ["rt"] }
postcard = { version = "1.0", features = ["alloc"] }
rand = { workspace = true }

# Stack growth for deeply recursive Nickel evaluation (optional, only needed with nickel)
stacker = { version = "0.1", optional = true }

# TOML editing for CI build preparation
toml_edit = "0.22"

# Agent dependencies (for aspen-ci-agent binary and local executor)
tokio-vsock = "0.7"
command-group = { version = "5.0", features = ["with-tokio"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[features]
default = ["shell-executor"]
nickel = ["dep:nickel-lang", "dep:aspen-nickel", "dep:stacker"]
# Shell executor for local/direct command execution
shell-executor = ["dep:aspen-ci-executor-shell"]
# VM executor for Cloud Hypervisor microVM isolation
plugins-vm = ["dep:aspen-ci-executor-vm", "aspen-jobs/plugins-vm"]
# Nix build executor for Nix flake builds
nix-executor = ["dep:aspen-ci-executor-nix"]
# SNIX storage (forwarded to executor crates)
snix = ["dep:snix-castore", "dep:snix-store", "dep:nix-compat", "aspen-ci-executor-shell?/snix"]
# HTTP/3 cache proxy for Nix binary cache substitution
nix-cache-proxy = ["aspen-ci-executor-shell?/nix-cache-proxy"]
# Replace workspace virtiofsd with in-process AspenVirtioFsHandler (AspenFs-backed)
# Implies plugins-vm since aspen-ci-executor-vm is an optional dep gated behind it
aspen-workspace-fs = ["plugins-vm", "aspen-ci-executor-vm/aspen-workspace-fs"]

[dev-dependencies]
tempfile = "3.4.0"
tokio-test = "0.4"
proptest = "1.0"
