[package]
name = "aspen-ci"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "CI/CD pipeline system for Aspen with Nickel configuration"
authors = ["Aspen Contributors"]

[[bin]]
name = "aspen-ci-agent"
path = "src/bin/aspen-ci-agent.rs"

[dependencies]
# Core Aspen dependencies
aspen-core = { workspace = true }
aspen-forge = { workspace = true }
aspen-jobs = { workspace = true }
aspen-blob = { workspace = true }
aspen-auth = { workspace = true }
aspen-ticket = { workspace = true }

# CI executor crates
aspen-ci-core = { path = "../aspen-ci-core" }
aspen-ci-executor-shell = { path = "../aspen-ci-executor-shell", optional = true }
aspen-ci-executor-vm = { path = "../aspen-ci-executor-vm", optional = true }
aspen-ci-executor-nix = { path = "../aspen-ci-executor-nix", optional = true }

# Optional Nickel configuration support
aspen-nickel = { path = "../aspen-nickel", optional = true }

# SNIX dependencies for direct NAR ingestion (optional, forwarded to executor crates)
snix-serde = { workspace = true, optional = true }
snix-eval = { workspace = true, optional = true }

# Nickel language for config parsing (optional)
nickel-lang = { workspace = true, optional = true }

# Serialization
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"
n0-future = { workspace = true }

# Error handling
snafu = "0.8.9"
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Utilities
blake3 = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { workspace = true }
hex = "0.4"
iroh = { version = "0.97.0", features = ["address-lookup-mdns", "address-lookup-pkarr-dht"] }
iroh-blobs = "0.99.0"
tokio-util = { version = "0.7", features = ["rt"] }
postcard = { version = "1.0", features = ["alloc"] }
rand = { workspace = true }

# Stack growth for deeply recursive Nickel evaluation (optional, only needed with nickel)
stacker = { version = "0.1", optional = true }

# TOML editing for CI build preparation
toml_edit = "0.22"

# Agent dependencies (for aspen-ci-agent binary and local executor)
tokio-vsock = "0.7"
command-group = { version = "5.0", features = ["with-tokio"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[features]
default = ["shell-executor"]
nickel = ["dep:nickel-lang", "dep:aspen-nickel", "dep:stacker"]
# Shell executor for local/direct command execution
shell-executor = ["dep:aspen-ci-executor-shell"]
# VM executor for Cloud Hypervisor microVM isolation
plugins-vm = ["dep:aspen-ci-executor-vm", "aspen-jobs/plugins-vm"]
# Nix build executor for Nix flake builds
nix-executor = ["dep:aspen-ci-executor-nix", "nix-cache"]
# Nix executor with SNIX integration for decomposed cache uploads
nix-executor-snix = ["nix-executor", "aspen-ci-executor-nix/snix"]
# Nix executor with in-process evaluation (snix-eval + snix-glue)
nix-executor-snix-eval = ["nix-executor-snix", "aspen-ci-executor-nix/snix-eval"]
# Nix executor with native build execution (bubblewrap/OCI sandbox)
nix-executor-snix-build = ["nix-executor-snix-eval", "aspen-ci-executor-nix/snix-build"]
# SNIX storage (forwarded to executor crates)
# In-process Nix evaluation for config deserialization via snix-serde
nix-config = ["dep:snix-serde", "dep:snix-eval"]
# Enable aspen-cache support in the shell executor (cache_index field)
nix-cache = ["aspen-ci-executor-shell?/nix-cache"]
# HTTP/3 cache proxy for Nix binary cache substitution
nix-cache-proxy = ["aspen-ci-executor-shell?/nix-cache-proxy"]

[dev-dependencies]
aspen-cache = { workspace = true }
tempfile = "3.4.0"
tokio-test = "0.4"
proptest = "1.0"
aspen-testing-core = { workspace = true }
