[package]
name = "aspen-cli"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Command-line interface for Aspen distributed systems"
authors = ["Aspen Contributors"]
build = "build.rs"

[[bin]]
name = "aspen-cli"
path = "src/bin/aspen-cli/main.rs"

[dependencies]
# Core Aspen dependencies
aspen-client = { path = "../aspen-client" }
aspen-client-api = { workspace = true }
aspen-core = { path = "../aspen-core" }
aspen-auth = { path = "../aspen-auth" }
aspen-cluster = { path = "../aspen-cluster" }
aspen-hooks-types = { path = "../aspen-hooks-types" }
aspen-blob = { path = "../aspen-blob", optional = true }
aspen-forge = { path = "../aspen-forge", optional = true }
aspen-plugin-api = { path = "../aspen-plugin-api", optional = true }
aspen-proxy = { workspace = true, optional = true }

# Async runtime
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs", "io-std"] }
async-trait = "0.1"

# CLI framework
clap = { version = "4.5.4", features = ["derive", "env", "string", "wrap_help"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
human-panic = "2.0"
indicatif = "0.17"
colored = "2.1"
comfy-table = "7.1"
dialoguer = "0.11"

# P2P networking (for tickets)
iroh = { version = "0.95.1", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-base = "0.95.1"

# Encoding
hex = "0.4"

# Random number generation
rand = "0.9"

# Serialization
postcard = { version = "1.0", features = ["alloc"] }
base64 = "0.22"

# Hashing
blake3 = "1.5"

# Archive handling
tar = "0.4"

# File operations
tempfile = "3.10"
dirs = "5.0"

# Git/Pijul operations
flate2 = { version = "1.0", optional = true }  # for git-bridge

[features]
default = []
blob = ["dep:aspen-blob"]
ci = ["aspen-client-api/ci"]
forge = ["dep:aspen-forge"]
git-bridge = ["forge", "dep:flate2"]
sql = []
secrets = ["aspen-client-api/secrets"]
automerge = ["aspen-client-api/automerge"]
plugins-rpc = ["dep:aspen-plugin-api"]
proxy = ["dep:aspen-proxy"]
