[package]
name = "aspen-client-rpc"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Client RPC protocol for Aspen distributed systems - re-exports types from aspen-client-api"
authors = ["Aspen Contributors"]

[dependencies]
# This crate re-exports all types from aspen-client-api for backwards compatibility
aspen-client-api = { workspace = true }

[features]
# Forward feature flags to aspen-client-api
default = []
pijul = ["aspen-client-api/pijul"]
secrets = ["aspen-client-api/secrets"]
automerge = ["aspen-client-api/automerge"]
