[package]
name = "aspen-client"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Pure client library for Aspen distributed systems - no raft/cluster dependencies"

[dependencies]
# Core Aspen dependencies
aspen-auth = { path = "../aspen-auth" }
aspen-client-api = { workspace = true }
aspen-core = { path = "../aspen-core" }
aspen-raft = { path = "../aspen-raft" }
aspen-transport = { path = "../aspen-transport" }

# P2P networking for Iroh connections
iroh = { version = "0.95.1", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-gossip = "0.95"
iroh-tickets = "0.2"

# Serialization (postcard for compact binary encoding)
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }

# Async runtime
tokio = { version = "1.48.0", features = ["rt", "sync", "time", "macros"] }
tokio-util = { version = "0.7" }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
rand = "0.9"
tracing = "0.1"
base64 = "0.22"
serde_json = "1.0"
hex = "0.4"

# Optional dependencies for blob-store feature
aspen-blob = { path = "../aspen-blob", optional = true }
async-trait = { version = "0.1", optional = true }
bytes = { version = "1.7", optional = true }
iroh-blobs = { version = "0.97", optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

[features]
default = []
# Feature flags for optional RPC variants (must match server features)
pijul = []
forge = []
# Enable RpcBlobStore implementation (requires aspen-blob)
blob-store = ["aspen-blob", "async-trait", "bytes", "iroh-blobs"]
