[package]
name = "aspen-client"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Pure client library for Aspen distributed systems - no raft/cluster dependencies"

[dependencies]
# Core Aspen dependencies
aspen-auth = { path = "../aspen-auth" }
aspen-client-api = { path = "../aspen-client-api" }
aspen-constants = { path = "../aspen-constants" }
aspen-core = { path = "../aspen-core" }
aspen-jobs-core = { path = "../aspen-jobs-core" }
aspen-ticket = { path = "../aspen-ticket", default-features = false, features = ["iroh"] }
aspen-transport = { path = "../aspen-transport", features = ["log-subscriber"] }

# P2P networking for Iroh connections
iroh = { version = "0.97.0", features = ["address-lookup-mdns", "address-lookup-pkarr-dht"] }
iroh-gossip = "0.97.0"
iroh-tickets = "0.4.0"

# Serialization (postcard for compact binary encoding)
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }

# Async runtime
tokio = { version = "1.48.0", features = ["rt", "sync", "time", "macros"] }
tokio-util = { version = "0.7" }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
rand = "0.9"
tracing = "0.1"
base64 = "0.22"
serde_json = "1.0"
hex = "0.4"

# Optional dependencies for blob-store feature
aspen-blob = { path = "../aspen-blob", optional = true }
async-trait = { version = "0.1", optional = true }
bytes = { version = "1.7", optional = true }
iroh-blobs = { version = "0.99.0", optional = true }

# Optional dependencies for cache-index feature
aspen-cache = { path = "../aspen-cache", optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

[features]
default = []
# Feature flags for optional RPC variants (must match server features)
forge = []
# Enable RpcBlobStore implementation (requires aspen-blob)
blob-store = ["aspen-blob", "async-trait", "bytes", "iroh-blobs"]
# Enable RpcCacheIndex implementation (requires aspen-cache)
cache-index = ["aspen-cache", "async-trait"]
