[package]
name = "aspen-cluster-bridges"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Event bridges between cluster subsystems and the hook service for Aspen"
authors = ["Aspen Contributors"]

[dependencies]
# Core Aspen dependencies
aspen-core = { workspace = true }
aspen-hooks = { workspace = true }
aspen-raft = { workspace = true }
aspen-transport = { workspace = true }

# Optional feature-gated Aspen dependencies
aspen-blob = { workspace = true, optional = true }
aspen-docs = { workspace = true, optional = true }
iroh-blobs = { version = "0.97", optional = true }

# Async runtime
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-util = { version = "0.7" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
base64 = "0.22"

# Logging
tracing = "0.1"

[dev-dependencies]
aspen-hooks = { workspace = true }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "test-util"] }

[features]
default = ["hooks"]
hooks = []
blob = ["hooks", "dep:aspen-blob", "dep:iroh-blobs"]
docs = ["hooks", "dep:aspen-docs"]
