[package]
name = "aspen-cluster-handler"
version = "0.1.0"
edition = "2024"
description = "Cluster management RPC handler for Aspen distributed cluster"
license = "AGPL-3.0-or-later"

[dependencies]
# RPC core abstractions (RequestHandler trait, ClientProtocolContext)
aspen-rpc-core = { path = "../aspen-rpc-core" }

# Local crates
aspen-client-api = { workspace = true }
aspen-client = { path = "../aspen-client" }
aspen-core = { path = "../aspen-core" }
aspen-ticket = { workspace = true }
aspen-docs = { path = "../aspen-docs", optional = true }
aspen-deploy = { path = "../aspen-deploy", optional = true }
aspen-cluster = { path = "../aspen-cluster", optional = true, features = ["deploy"] }
aspen-constants = { path = "../aspen-constants", optional = true }
aspen-traits = { path = "../aspen-traits", optional = true }
aspen-kv-types = { path = "../aspen-kv-types", optional = true }

# Core dependencies
async-trait = "0.1"
anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1.48.0", features = ["rt"], optional = true }

# Iroh dependencies
iroh = { version = "0.97.0" }
iroh-gossip = "0.97.0"

# Optional blob dependencies
aspen-blob = { path = "../aspen-blob", optional = true }
iroh-blobs = { version = "0.99.0", optional = true }

# Serialization
postcard = { version = "1.0", optional = true }

# Hash
blake3 = { workspace = true }

[features]
default = []
docs = ["dep:aspen-docs"]
jobs = ["aspen-rpc-core/jobs"]
deploy = ["dep:aspen-deploy", "aspen-deploy?/iroh", "dep:aspen-cluster", "dep:aspen-constants", "dep:aspen-traits", "dep:aspen-kv-types", "dep:tokio", "dep:postcard", "aspen-rpc-core/deploy"]
blob = ["dep:aspen-blob", "dep:iroh-blobs", "aspen-rpc-core/blob"]

[dev-dependencies]
aspen-testing = { workspace = true }
aspen-rpc-core = { path = "../aspen-rpc-core", features = ["testing"] }
aspen-deploy = { path = "../aspen-deploy" }
aspen-cluster-types = { path = "../aspen-cluster-types", default-features = false, features = ["iroh"] }
aspen-client-api = { workspace = true }
aspen-traits = { path = "../aspen-traits" }
async-trait = "0.1"
postcard = "1.0"
tokio = { version = "1.0", features = ["full", "test-util"] }
