[package]
name = "aspen-cluster-types"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Cluster management types for Aspen distributed systems"

[dependencies]
# Serialization
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

# Error handling
thiserror = "2.0"

# Optional P2P address conversion helpers
iroh-base = { version = "0.97.0", default-features = false, features = ["key"], optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["iroh"]
iroh = ["dep:iroh-base"]
